[gd_scene load_steps=9 format=3 uid="uid://cjfpyajftu18t"]

[ext_resource type="Texture2D" uid="uid://cq1xv7b78oebc" path="res://Assets/sprites/fundoPacMan.webp" id="1_2sqnl"]
[ext_resource type="Script" uid="uid://c0rqiyywhxvs5" path="res://Assets/scripts/level_select.gd" id="1_72w8f"]
[ext_resource type="Texture2D" uid="uid://cdij3i6v8l7t3" path="res://Assets/sprites/pacmac-removebg-preview-removebg-preview.png" id="2_72w8f"]
[ext_resource type="Theme" uid="uid://dhmwuc8la8swv" path="res://botao.tres" id="3_s6o25"]
[ext_resource type="Texture2D" uid="uid://c53a85fqhccjj" path="res://Assets/sprites/Pac-Man_ingame_and_2D_alternative_design-removebg-preview.png" id="4_kb5mc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnihq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tgoug"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x038j"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72w8f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 703.0
grow_vertical = 2

[node name="bg" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_2sqnl")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("2_72w8f")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qnihq")

[node name="level1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s6o25")
text = "Nível 1
"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_tgoug")

[node name="level2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s6o25")
text = "Nível 2
"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_x038j")

[node name="level3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s6o25")
text = "Nível 3
"

[node name="PacMan" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kb5mc")
stretch_mode = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/level3" to="." method="_on_level_3_pressed"]
